# OMPython

./: .gitattributes  .gitignore  .pre-commit-config.yaml  COPYING  Jenkinsfile  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/: auto_assign-issues.yml
.github/ISSUE_TEMPLATE/: bug_report.md  first_bug_report.md
.github/workflows/: FMITest.yml  Test.yml  Test_v400.yml  Test_v400_py310.yml  Test_v4xx.yml
.jenkins/: Dockerfile
.jenkins/python2/: Dockerfile
.jenkins/python3/: Dockerfile
Compiler/scripts/PythonInterface/: README.txt  setup.py
Compiler/scripts/PythonInterface/OMPython/: OMConfig.py.in  __init__.py
Compiler/scripts/PythonInterface/OMPython/OMParser/: __init__.py
Compiler/scripts/PythonInterface/OMPython/OMPythonParser/: __init__.py
Compiler/scripts/PythonInterface/_GlobalIDL/: __init__.py
Compiler/scripts/PythonInterface/_GlobalIDL__POA/: __init__.py
Compiler/scripts/PythonInterface/stubs/: OmcClient_idl.py  __init__.py
OMPython/: ModelicaSystem.py  OMBase.py  OMCSession.py  OMParser.py  OMRunner.py  OMTypedParser.py  __init__.py  compatibility_v400.py  model_execution.py  modelica_doe_abc.py  modelica_doe_omc.py  modelica_doe_runner.py  modelica_system_abc.py  modelica_system_omc.py  modelica_system_runner.py  oc_latch.bat  oc_latch.c  oc_latch.libs  oc_latch.makefile  oc_latch_01exo.c  oc_latch_02nls.c  oc_latch_03lsy.c  oc_latch_04set.c  oc_latch_05evt.c  oc_latch_06inz.c  oc_latch_07dly.c  oc_latch_08bnd.c  oc_latch_09alg.c  oc_latch_10asr.c  oc_latch_11mix.c  oc_latch_12jac.c  oc_latch_12jac.h  oc_latch_13opt.c  oc_latch_13opt.h  oc_latch_14lnz.c  oc_latch_15syn.c  oc_latch_16dae.c  oc_latch_16dae.h  oc_latch_17inl.c  oc_latch_18spd.c  (+10 more)
OMPython/OMParser/: __init__.py
PythonInterface/: Makefile.common  Makefile.in  OMPython v1.0 User Manual.docx  README.txt  Readme.txt  setup.py
PythonInterface/Documentation/: index.html
PythonInterface/Icons/: splash.xcf
PythonInterface/OMPython/: OMTypedParser.py  __init__.py  omc_session.py
PythonInterface/OMPython/OMParser/: __init__.py
PythonInterface/Plugins/Algorithms/Control/: Misc.py  lti.py
PythonInterface/Plugins/Algorithms/Control/Internal/: StateSpace.py
PythonInterface/Plugins/Algorithms/Integrator/Sundials/: README.txt
PythonInterface/Plugins/Analysis/.Template/: Template.py  TemplateOld.py
PythonInterface/Plugins/Analysis/.Template/Icons/: License.txt
PythonInterface/Plugins/Analysis/EigenvalueAnalysis/: scatterInspector.py
PythonInterface/Plugins/Analysis/SignalProcessing/: Algorithms.py  SignalProcessing.py
PythonInterface/Plugins/SimulationResult/Mtsf/: MtsfFmi.py
PythonInterface/Plugins/Simulator/: SimulatorBase.py
PythonInterface/Plugins/Simulator/FMUSimulator/: FMUError.py
PythonInterface/Plugins/Simulator/OpenModelica/: OpenModelica.py
PythonInterface/PySimulator/: IntegratorControl.py  License.txt  PySimulator.py  Usersguide.docx  plotWidget.py
PythonInterface/PySimulator/Icons/: UsedIcons.doc  dlr-LICENSES.txt
PythonInterface/PySimulator/Plugins/Analysis/EigenvalueAnalysis/: EigenvalueAnalysis.py
PythonInterface/PySimulator/Plugins/Analysis/LinearSystemAnalysis/: LinearSystemAnalysis.py  LinearizeFMU.py
PythonInterface/PySimulator/Plugins/Analysis/MinMax/: MinMax.py
PythonInterface/PySimulator/Plugins/SimulationResult/: IntegrationResults.py
PythonInterface/PySimulator/Plugins/SimulationResult/DymolaMat/: DymolaMat.py
PythonInterface/PySimulator/Plugins/SimulationResult/Mtsf/: Mtsf.py  MtsfFmi.py  pyMtsf.py
examples/RLC_series/: README.md  RLC_series.mo  main.py
examples/parameters_validation/: main.py  model.mo
tests/: __init__.py  test_ArrayDimension.py  test_FMIExport.py  test_FMIImport.py  test_FMIRegression.py  test_ModelExecutionCmd.py  test_ModelicaDoEOMC.py  test_ModelicaDoERunner.py  test_ModelicaSystem.py  test_ModelicaSystemCmd.py  test_ModelicaSystemDoE.py  test_ModelicaSystemOMC.py  test_ModelicaSystemRunner.py  test_OMCPath.py  test_OMParser.py  test_OMSessionCmd.py  test_OMTypedParser.py  test_ZMQ.py  test_docker.py  test_linearization.py  test_optimization.py  test_typedParser.py
tests_v400/: test_FMIExport.py  test_FMIRegression.py  test_ModelicaSystem.py  test_ModelicaSystemCmd.py  test_OMParser.py  test_ZMQ.py  test_docker.py  test_linearization.py  test_optimization.py
(+3 files in other folders)
