[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "OMPython"
version = "4.0.0"
description = "OpenModelica-Python API Interface"
readme = "README.md"
authors = [
    {name = "Anand Kalaiarasi Ganeson", email = "ganan642@student.liu.se"},
]
maintainers = [
    {name = "Adeel Asghar", email = "adeel.asghar@liu.se"},
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "psutil",
    "pyparsing",
    "pyzmq",
]

[tool.setuptools]
packages = ["OMPython"]

[project.urls]
Homepage = "http://openmodelica.org/"
Documentation = "https://openmodelica.org/doc/OpenModelicaUsersGuide/latest/ompython.html"
"Source Code" = "https://github.com/OpenModelica/OMPython"
Issues = "https://github.com/OpenModelica/OMPython/issues"
"Release Notes" = "https://github.com/OpenModelica/OMPython/releases"
Download = "https://pypi.org/project/OMPython/#files"

[tool.flake8]
extend-ignore = [
    'E501', # line too long
    'E741', # ambiguous variable name 'l'
]
