[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "OMPython"
version = "4.0.0"
description = "OpenModelica-Python API Interface"
readme = "README.md"
authors = [
    {name = "Anand Kalaiarasi Ganeson", email = "ganan642@student.liu.se"},
]
maintainers = [
    {name = "Adeel Asghar", email = "adeel.asghar@liu.se"},
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "psutil",
    "pyparsing",
    "pyzmq",
]

[tool.setuptools]
packages = ["OMPython"]

[tool.setuptools.package-data]
"OMPython" = ["py.typed"]

[project.urls]
Homepage = "http://openmodelica.org/"
Documentation = "https://openmodelica.org/doc/OpenModelicaUsersGuide/latest/ompython.html"
"Source Code" = "https://github.com/OpenModelica/OMPython"
Issues = "https://github.com/OpenModelica/OMPython/issues"
"Release Notes" = "https://github.com/OpenModelica/OMPython/releases"
Download = "https://pypi.org/project/OMPython/#files"

[tool.flake8]
max-line-length = 120
extend-ignore = [
]

[tool.pylint.main]
# In verbose mode, extra non-checker-related info will be displayed.
# verbose = true
ignore = [
]
ignore-paths = [
]
ignore-patterns = [
]

[tool.pylint.format]
# Maximum number of characters on a single line.
max-line-length = 120

[tool.pylint.reports]
reports = true

[tool.pylint.'MESSAGES CONTROL']
disable = [
    'C0302', # Too many lines in module (too-many-lines)
    'R0902', # Too many instance attributes (too-many-instance-attributes)
    'R0912', # Too many branches (too-many-branches)
    'R0913', # Too many arguments (too-many-arguments)
    'R0914', # Too many local variables (too-many-locals)
    'R0915', # Too many statements (too-many-statements)
    'R0917', # Too many positional arguments (too-many-positional-arguments)
    'W0613', # Unused argument (unused-argument)

    # TODO: the items below should be checked and corrected
    'C0103', # Variable name doesn't conform to snake_case naming style (invalid-name)
    'C0116', # Missing function or method docstring (missing-function-docstring)
    'W0511', # TODO / fixme (fixme)
    'W1203', # Use lazy % formatting in logging functions (logging-fstring-interpolation)
]
